@@ -5,6 +5,10 @@
    - avsm@cvs.openbsd.org 2004/08/11 21:43:05
      [channels.c channels.h clientloop.c misc.c misc.h serverloop.c ssh-agent.c]
      some signed/unsigned int comparison cleanups; markus@ ok
+   - avsm@cvs.openbsd.org 2004/08/11 21:44:32
+     [authfd.c scp.c ssh-keyscan.c]
+     use atomicio instead of homegrown equivalents or read/write.
+     markus@ ok
 
 20040812
  - (dtucker) [sshd.c] Remove duplicate variable imported during sync.
@@ -1602,4 +1606,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3499 2004/08/13 11:18:00 dtucker Exp $
+$Id: ChangeLog,v 1.3500 2004/08/13 11:19:37 dtucker Exp $
